--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "~4.9.x",
-    "pg": "^4.3.0"
+    "pg": "^4.3.0",
+    "request": "^2.55.0"
   },
   "engines": {
     "node": "0.12.2"
